# liboot

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  NOTICE.md  README.md  SECURITY.md
.github/workflows/: build.yml  release.yml
bindings/: README.md
bindings/cpp/: liboot.hpp
bindings/csharp/: LibOot.cs  README.md
cmake/: liboot.pc.in  libootConfig.cmake.in
docs/: API_REFERENCE.md  ENGINE_INTEGRATION.md  FIDELITY.md  GETTING_STARTED.md  README.md  UNIVERSAL_SDK.md  USAGE.md
examples/: Makefile  basic.c  engine.c
src/: audio_extract.c  audio_extract.h  audio_math.h  audio_sequence.c  equip.c  gfx_adapter.c  liboot.c  liboot.h  liboot_assets.h  liboot_engine.c  liboot_engine.h  load_assets.c  rom_util.c  rom_util.h  scene.c  targets.c
src/decomp/assets/objects/gameplay_dangeon_keep/: gameplay_dangeon_keep.h
src/decomp/assets/objects/object_bdoor/: object_bdoor.h
src/decomp/include/: bgcheck.h  collision_check.h  item.h  player.h  segmented_address.h
src/decomp/include/overlays/actors/ovl_En_Horse/: z_en_horse.h
src/decomp/include/ultra64/: gbi.h  libc.h  rcp.h  ultratypes.h
src/decomp/src/code/: sys_math3d.c  sys_matrix.c  z_actor.c  z_bgcheck.c
src/shim/: fake_play.c  fake_play.h  oot_globals.c  stubs.c
test/: Makefile  asset_test.c  audio_catalog_test.c  audio_overflow_test.c  audio_sequence_test.c  collision_mask_test.c  csharp_init_test.cs  enemy_bgm_test  enemy_bgm_test.c  engine_api_test.c  engine_init_test.c  equip_test.c  fidelity_runner.c  headless.c  playground.c  playground_ui.c  playground_ui.h  rom_util_test.c  voicetest.c
tools/: check-symbols.sh  check-version.sh  gen_anim_headers.py  gen_asset_symbols.py  public-symbols.txt  undef-assets.txt  undef-engine.txt  vendor-list.txt  vendor.sh
